Implementacion de calendario, solapamiento de horarios
